Finalisation du projet
Mise en place de longueur et de hauteur pour les images ainsi que pour le responsive du site et correction pour etre valide w3c

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CV d'Olivier">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Roboto:wght@400;700;900&display=swap"    rel="stylesheet">
@@ -15,13 +16,11 @@
         <h2>Olivier.</h2>
         <p><img src="image/telephone.svg" alt="icone telephone">+98 76-54-1423</p>
         <p><img src="image/mail.svg" alt="icone mail">olivier.depiesse@gmail.com</p>
-        <a href="#">
             <span class="burger-icone">
                 <span></span>
                 <span></span>
                 <span></span>
             </span>
-        </a>
     </header>
     <div class="container">
         <div class="box">
@@ -31,7 +30,7 @@
                     <h1>Hola, mi nombre es <span>Olivier.</span></h1>
                     <p>Développement : Environnement LAMP, Zend Framework, ExtJS, Webservices, AMFPHP, API Google Maps, Facebook Open Graph, API Twitter</p>
                     <p>Directeur technique Webedia Madrid</p>
-                    <p><a id="rouge" href="/">Portfolio</a><a href="">Contact</a></p>
+                    <p><a class="rouge" href="/">Portfolio</a><a href="">Contact</a></p>
                 </div>
                 <div class="image">
                     <img src="image/olivier.webp" width="765" height="526" alt="portait d'olivier">
@@ -39,12 +38,12 @@
                 <div class="client">
                     <p>CLIENTS</p>
                     <div class="logo">
-                        <img src="image/sega1860w.webp" alt="logo sega" srcset="image/sega375w.webp 375w, image/sega1860w.webp 1860w" width="100%">
-                        <img src="image/ubisoft1860w.webp" alt="logo ubisoft" srcset="image/ubisoft375w.webp 375w, image/ubisoft1860w.webp 1860w" width="100%">
-                        <img src="image/microsoft1860w.webp" alt="logo microsoft" srcset="image/microsoft375w.webp 375w, image/microsoft1860w.webp 1860w" width="100%">
-                        <img src="image/electronic_arts1860w.webp" alt="logo electronic arts" srcset="image/electronic_arts375w.webp 375w,image/electronic_arts1860w.webp 1860w" width="100%">
-                        <img src="image/capcom1860w.webp"  alt="logo capcom" srcset="image/capcom375w.webp 375w, image/capcom1860w.webp 1860w" width="100%">
-                        <img src="image/bethesda1860w.webp"  alt="logo bethesda" srcset="image/bethesda375w.webp 375w, image/bethesda1860w.webp 1860w" width="100%">
+                        <img src="image/sega1860w.webp" alt="logo sega" srcset="image/sega375w.webp 375w, image/sega1860w.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" >
+                        <img src="image/ubisoft1860w.webp" alt="logo ubisoft" srcset="image/ubisoft375w.webp 375w, image/ubisoft1860w.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" >
+                        <img src="image/microsoft1860w.webp" alt="logo microsoft" srcset="image/microsoft375w.webp 375w, image/microsoft1860w.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" >
+                        <img src="image/electronic_arts1860w.webp" alt="logo electronic arts" srcset="image/electronic_arts375w.webp 375w,image/electronic_arts1860w.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" >
+                        <img src="image/capcom1860w.webp"  alt="logo capcom" srcset="image/capcom375w.webp 375w, image/capcom1860w.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" >
+                        <img src="image/bethesda1860w.webp"  alt="logo bethesda" srcset="image/bethesda375w.webp 375w, image/bethesda1860w.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" >
                     </div>
                 </div>
             </div>
@@ -54,22 +53,22 @@
                     <p>It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="tableau">
-                    <div id="col">
+                    <div class="col">
                         <img src="image/technique.svg" width="20" height="20" alt="">
                         <h3>Technique</h3>
                         <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                     </div>
-                    <div id="col">
+                    <div class="col">
                         <img src="image/gestion.svg" width="20" height="20" alt="">
                         <h3>Gestion de projet</h3>
                         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
                     </div>
-                    <div id="col">
+                    <div class="col">
                         <img src="image/management.svg" width="20" height="20" alt="">
                         <h3>Management</h3>
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                     </div>
-                    <div id="col">
+                    <div class="col">
                         <img src="image/langue.svg" width="20" height="20" alt="">
                         <h3>Langues</h3>
                         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
@@ -82,12 +81,12 @@
                     <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="imageportfolio">
-                    <img id="astronaute" src="image/astronaute.webp" srcset="" alt="container avec astonaute en fond" srcset="image/astronaute375w.webp 375w, images/astronaute.webp 1860w" width="100%">
-                    <img id="bureaux" src="image/bureaux.webp"  alt="bureau de travail" srcset="image/bureaux375w.webp 375w, image/bureaux.webp 1860w" width="100%">
-                    <img id="hello" src="image/hello.webp"  alt="pot de peinture verte avec bouteille ou est ecrit hello " srcset="image/hello375w.webp 375w, image/hello.webp 1860w" width="100%">
-                    <img id="waterbox" src="image/waterbox.webp" alt="brique d'eau blanche avec inscription noire" srcset="image/waterbox375w.webp 375w, image/waterbox.webp 1860w" width="100%">
-                    <img id="writing" src="image/writing.webp"  alt="machine a ecrire en premier plan" srcset="image/writing375w.webp 375w, image/writing.webp 1860w" width="100%">
-                    <img id="blue" src="image/blue.webp"  alt="citron vert couper en deux" srcset="image/blue375w.webp 375w, image/blue.webp 1860w" width="100%">
+                    <img id="astronaute" src="image/astronaute.webp" alt="container avec astonaute en fond" srcset="image/astronaute375w.webp 375w, image/astronaute.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" width="480" height="263">
+                    <img id="bureaux" src="image/bureaux.webp"  alt="bureau de travail" srcset="image/bureaux375w.webp 375w, image/bureaux.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" width="227" height="266">
+                    <img id="hello" src="image/hello.webp"  alt="pot de peinture verte avec bouteille ou est ecrit hello " srcset="image/hello375w.webp 375w, image/hello.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" width="227" height="264">
+                    <img id="waterbox" src="image/waterbox.webp" alt="brique d'eau blanche avec inscription noire" srcset="image/waterbox375w.webp 375w, image/waterbox.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" width="479" height="264">
+                    <img id="writing" src="image/writing.webp"  alt="machine a ecrire en premier plan" srcset="image/writing375w.webp 375w, image/writing.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" width="347" height="264">
+                    <img id="blue" src="image/blue.webp"  alt="citron vert couper en deux" srcset="image/blue375w.webp 375w, image/blue.webp 1860w" sizes="(max-width: 1400px) 375px, 1860px" width="359" height="264">
                 </div>
             </div>
             <div class="experience">
@@ -96,7 +95,7 @@
                     <p id="descriptionexperience">Necessitatibus eius consequatur ex aliquid fuga eum quidem, It doesn't matter how great your product or service is if your copy does not captivate your audience.</p>
                 </div>
                 <div class="bouton">
-                    <p><a id="rouge" href="">Download Resume</a></p>
+                    <p><a class="rouge" href="">Download Resume</a></p>
                 </div>
                 <div class="experiencetableau">
                     <div class="experiencedate">
@@ -104,7 +103,7 @@
                         <h3>Web Developper</h3>
                         <p><img src="image/icone_ba.svg"  width="24" height="24" alt="icone d'une fenetre et les lettre ba en premiere plan">MAI 2010 - AVRIL 2021</p>
                         <h3>Directeur de projet Web</h3>
-                        <p><img src="image/icone_fenetre.svg"  width="24" height="24" alt="">SEPT 2008 - MAI 2009</p>
+                        <p><img src="image/icone_fenetre.svg"  width="24" height="24" alt="icone représentant une fenetre">SEPT 2008 - MAI 2009</p>
                         <h3>Web Developper</h3>
                     </div>
                     <div class="experiencedescription">
@@ -117,7 +116,7 @@
             <div class="compétences">
                 <div class="imagecompétences">
                     <div class="block">
-                        <p id="Angular"><img src="image/angular.svg"  width="22.32" height="24" alt="logo angular">Angular <span>80%</span></p>
+                        <p id="Angular"><img src="image/angular.svg"  width="22" height="24" alt="logo angular">Angular <span>80%</span></p>
                         <p id="React"><img src="image/react.svg" width="24" height="24" alt="logo React">React <span>90%</span></p>
                     </div>
                     <div class="block">
@@ -153,26 +152,26 @@
                     <h2><span>Actu</span>alités</h2>
                 </div>
                 <div id="actualité-right">
-                    <p id="date-actualité">19 AOÛT 2014</p>
-                    <p id="titreactualité">OMOTE / REAL-TIME FACE TRACKING & PROJECTION MAPPING</p>
-                    <p id="textactualité">LIVE INSTALLATION ON 2014/8/28connpass.com/event/8112/ PROJECT MEMBERS NOBUMICHI ASAI (PLANNER / PRODUCER / TECHNICAL...</p>
-                    <p id="date-actualité">08 NOVEMBRE 2013</p>
-                    <p id="titreactualité">Forest</p>
-                    <p id="textactualité">Movie : Takeshi Tsunehashi d-apartment.net - The post Forest first appeared on Yop Concept.</p>
-                    <p id="date-actualité">18 OCTOBRE 2013</p>
-                    <p id="titreactualité">Atoms For Peace - Before Your Very Eyes</p>
-                    <p id="textactualité">Vous trouverez ici le making-of: <br>http://www.youtube.com/watch?v=mfWNvhgHV3A...</p>
+                    <p class="date-actualité">19 AOÛT 2014</p>
+                    <p class="titreactualité">OMOTE / REAL-TIME FACE TRACKING & PROJECTION MAPPING</p>
+                    <p class="textactualité">LIVE INSTALLATION ON 2014/8/28connpass.com/event/8112/ PROJECT MEMBERS NOBUMICHI ASAI (PLANNER / PRODUCER / TECHNICAL...</p>
+                    <p class="date-actualité">08 NOVEMBRE 2013</p>
+                    <p class="titreactualité">Forest</p>
+                    <p class="textactualité">Movie : Takeshi Tsunehashi d-apartment.net - The post Forest first appeared on Yop Concept.</p>
+                    <p class="date-actualité">18 OCTOBRE 2013</p>
+                    <p class="titreactualité">Atoms For Peace - Before Your Very Eyes</p>
+                    <p class="textactualité">Vous trouverez ici le making-of: <br>http://www.youtube.com/watch?v=mfWNvhgHV3A...</p>
                 </div>
             </div>
             <div class="contact">
                 <div id="contact-left">
                     <h3>Contact.</h3>
-                    <p id="imagecontact"><img src="image/adresse-contact.svg" width="14.91" height="18" alt="icone adresse">Adresse</p>
-                    <p id="info">36 rue des Peupliers <br> Paris (75018) France</p>
-                    <p id="imagecontact"><img src="image/mail-contact.svg" width="18" height="16.36" alt="icone mail">Mail</p>
-                    <p id="info">olivier.depiesse@gmail.com</p>
-                    <p id="imagecontact"><img src="image/telephone-contact.svg" width="18" height="18" alt="icone telephone">Téléphone</p>
-                    <p id="info">06 54 84 54 75</p>
+                    <p class="imagecontact"><img src="image/adresse-contact.svg" width="15" height="18" alt="icone adresse">Adresse</p>
+                    <p class="info">36 rue des Peupliers <br> Paris (75018) France</p>
+                    <p class="imagecontact"><img src="image/mail-contact.svg" width="18" height="16" alt="icone mail">Mail</p>
+                    <p class="info">olivier.depiesse@gmail.com</p>
+                    <p class="imagecontact"><img src="image/telephone-contact.svg" width="18" height="18" alt="icone telephone">Téléphone</p>
+                    <p class="info">06 54 84 54 75</p>
                 </div>
                 <div id="contact-right">
                     <h3>Contactez moi</h3>
@@ -181,21 +180,21 @@
                     <div class="formulaire">
                         <div id="nom">
                             <fieldset><legend>Votre nom:</legend>
-                            <label><textarea name="/" id="/" cols="30" rows=""></textarea></label>
+                            <label for="nomlabel"><textarea name="nom" id="nomlabel" cols="30" rows="2" placeholder="votre nom"></textarea></label>
                             </fieldset>
                         </div>
                         <div id="email">
                             <fieldset><legend>Votre email:</legend>
-                                <label><textarea name="/" id="/" cols="32" rows=""></textarea></label>
+                                <label for="emaillabel"><textarea name="email" id="emaillabel" cols="32" rows="2" placeholder="votre e-mail"></textarea></label>
                             </fieldset>
                         </div>
                     </div>
                     <div id="message">
                         <fieldset><legend>Message:</legend>
-                        <label><textarea name="/" id="/" cols="77" rows="10"></textarea></label>
+                        <label for="messagelabel"><textarea name="message" id="messagelabel" cols="77" rows="10" placeholder="votre message"></textarea></label>
                         </fieldset>
                     </div>  
-                    <a id="rouge" href="">Envoyer</a>
+                    <a class="rouge" href="">Envoyer</a>
                 </div>
             </div>
         </div>
